[tool.poetry]
name = "cowpy"
version = "1.1.3"
description = ""
authors = ["Jeff Buttars <jeffbuttars@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
twine = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
